--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a href="#about">About</a>
                 <a href="#how-it-works">How It Works</a>
                 <div class="auth-buttons">
-                    <a href="#login" class="login-btn">Login</a>
-                    <a href="#signup" class="signup-btn">Sign Up</a>
+                    <a href="login.html" class="login-btn">Login</a>
+                    <a href="sign_up.html" class="signup-btn">Sign Up</a>
                 </div>
             </div>
             <div class="menu-toggle">
@@ -36,8 +36,8 @@
                 <h1>Connect Global Markets with African Trade</h1>
                 <p>Your gateway to international commerce, starting with Rwanda</p>
                 <div class="cta-buttons">
-                    <a href="#seller-signup" class="cta-primary">Start Selling</a>
-                    <a href="#buyer-signup" class="cta-secondary">Start Buying</a>
+                    <a href="login.html" class="cta-primary">Start Selling</a>
+                    <a href="login.html" class="cta-secondary">Start Buying</a>
                 </div>
             </div>
         </section>
@@ -123,6 +123,21 @@
               </div>
           </div>
       </section>
+      <section id="about">
+        <h2>About Us</h2>
+        <p>The <strong>ShopWise Program</strong> is a new project that aims to improve retail in Africa by offering smart solutions to make stores more efficient, enhance customer experiences, and help local shops manage inventory more effectively.</p>
+        <p>Africa’s retail market is growing rapidly due to increasing urbanization and smartphone usage. This shift has created a demand for modern and convenient shopping experiences. However, local shops face several challenges, including outdated stock management systems and limited ways to engage customers. The ShopWise Program seeks to address these issues using advanced technology, helping businesses grow and making customers happier.</p>
+        
+        <h3>Our Services</h3>
+        <ul>
+            <li><strong>Inventory Management</strong>: Real-time tracking to reduce waste and optimize ordering.</li>
+            <li><strong>Customer Analytics</strong>: Tools to analyze shopping habits and enable personalized marketing.</li>
+            <li><strong>Mobile Payments</strong>: Fast and secure payment options for seamless transactions.</li>
+        </ul>
+
+        <h3>Our Vision</h3>
+        <p>The ShopWise Program is a transformative opportunity to modernize and digitize Africa’s retail industry. By integrating smart solutions, ShopWise aims to drive technological advancement, improve customer satisfaction, and contribute to Africa’s economic development. With a strong foundation and innovative strategies, ShopWise has the potential to bring significant changes, empowering local businesses and enhancing the shopping experience for customers across the continent.</p>
+    </section>
       
 
         <section id="how-it-works">
