--- a/login.html
+++ b/login.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="signup-container">
-        <form class="signup-form" id="signupForm">
-            <h2>Sign Up</h2>
-            <div class="input-group">
-                <label for="name">Full Name</label>
-                <div class="input-wrapper">
-                    <i class="fa fa-user"></i>
-                    <input type="text" id="name" placeholder="Enter your full name" required>
-                </div>
+    <div class="login-container">
+        <form class="login-form" id="loginForm">
+            <h2>Login as <span id="userRole">Buyer</span></h2>
+            <div class="toggle-role">
+                <button type="button" onclick="toggleRole()">Switch to <span id="switchRole">Seller</span></button>
             </div>
             <div class="input-group">
                 <label for="email">Email</label>
@@ -31,23 +28,23 @@
                     <input type="password" id="password" placeholder="Enter your password" required>
                 </div>
             </div>
-            <div class="input-group">
-                <label for="role">Sign up as</label>
-                <select id="role">
-                    <option value="Buyer">Buyer</option>
-                    <option value="Seller">Seller</option>
-                </select>
-            </div>
-            <button type="submit" class="signup-btn"><i class="fa fa-user-plus"></i> Sign Up</button>
-            <p class="login-link">Already have an account? <a href="login.html">Login</a></p>
+            <button type="submit" class="login-btn"><i class="fa fa-sign-in-alt"></i> Login</button>
+            <p class="register-link">Don't have an account? <a href="sign_up.html">Register</a></p>
         </form>
     </div>
 
     <script>
-        document.getElementById('signupForm').addEventListener('submit', function(event) {
+        let currentRole = 'Buyer';
+        
+        function toggleRole() {
+            currentRole = currentRole === 'Buyer' ? 'Seller' : 'Buyer';
+            document.getElementById('userRole').innerText = currentRole;
+            document.getElementById('switchRole').innerText = currentRole === 'Buyer' ? 'Seller' : 'Buyer';
+        }
+        
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const role = document.getElementById('role').value;
-            const dashboardUrl = role === 'Buyer' ? 'buyer_dashboard.html' : 'seller_dashboard.html';
+            const dashboardUrl = currentRole === 'Buyer' ? 'buyer_dashboard.html' : 'seller_dashboard.html';
             window.location.href = dashboardUrl;
         });
     </script>
@@ -71,7 +68,7 @@
         background: linear-gradient(135deg, #1e3c72, #2a5298); /* Dark blue gradient */
     }
 
-    .signup-container {
+    .login-container {
         background: rgba(255, 255, 255, 0.2);
         backdrop-filter: blur(10px);
         padding: 2rem;
@@ -82,9 +79,27 @@
         color: white;
     }
 
-    .signup-form h2 {
-        margin-bottom: 1.5rem;
+    .login-form h2 {
+        margin-bottom: 1rem;
         color: #fff;
+    }
+
+    .toggle-role {
+        margin-bottom: 1rem;
+    }
+
+    .toggle-role button {
+        background: #ffcc00;
+        color: #333;
+        border: none;
+        padding: 8px 12px;
+        cursor: pointer;
+        border-radius: 5px;
+        font-weight: bold;
+    }
+
+    .toggle-role button:hover {
+        background: #ffaa00;
     }
 
     .input-group {
@@ -121,16 +136,7 @@
         color: white;
     }
 
-    select {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background: rgba(255, 255, 255, 0.2);
-        color: white;
-    }
-
-    .signup-btn {
+    .login-btn {
         width: 100%;
         padding: 10px;
         background: #ffcc00;
@@ -142,23 +148,23 @@
         font-weight: bold;
     }
 
-    .signup-btn:hover {
+    .login-btn:hover {
         background: #ffaa00;
     }
 
-    .login-link {
+    .register-link {
         margin-top: 10px;
         font-size: 14px;
         color: white;
     }
 
-    .login-link a {
+    .register-link a {
         color: #ffcc00;
         text-decoration: none;
         font-weight: bold;
     }
 
-    .login-link a:hover {
+    .register-link a:hover {
         text-decoration: underline;
     }
 </style>
