developed and added pages

--- a/index.html
+++ b/index.html
@@ -45,28 +45,29 @@
         <section id="features">
             <h2>Why Choose ShopWise?</h2>
             <div class="features-grid">
-                <div class="feature-card">
+                <div class="feature-card" style="background: url('products/bg1.jpg') no-repeat center center/cover;">
                     <i class="fas fa-globe"></i>
                     <h3>Global Reach</h3>
                     <p>Connect with buyers and sellers worldwide</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card" style="background: url('products/bg2.jpg') no-repeat center center/cover;">
                     <i class="fas fa-lock"></i>
                     <h3>Secure Platform</h3>
                     <p>Safe transactions and verified users</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card" style="background: url('products/bg3.jpg') no-repeat center center/cover;">
                     <i class="fas fa-comments"></i>
                     <h3>Direct Communication</h3>
                     <p>Chat directly with buyers/sellers</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card" style="background: url('products/bg4.jpg') no-repeat center center/cover;">
                     <i class="fas fa-bell"></i>
                     <h3>Smart Notifications</h3>
                     <p>Stay updated on relevant products</p>
                 </div>
             </div>
         </section>
+        
 
         <section id="marketplace-preview">
           <h2>Featured Products</h2>
