--- a/sign_up.html
+++ b/sign_up.html
@@ -213,8 +213,8 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="#marketplace">Marketplace</a>
-                <a href="#about">About</a>
-                <a href="#how-it-works">How It Works</a>
+                <a href="about_us.html">About</a>
+                <a href="how_it_work.html">How It Works</a>
                 <div class="auth-buttons">
                     <a href="login.html" class="login-btn">Login</a>
                     <a href="sign_up.html" class="signup-btn">Sign Up</a>
