--- a/about_us.html
+++ b/about_us.html
@@ -117,8 +117,8 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="marketplace.html">Marketplace</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="how-it-works.html">How It Works</a></li>
+                <li><a href="about_us.html">About</a></li>
+                <li><a href="how_it_work.html">How It Works</a></li>
                 <li class="auth-buttons">
                     <a href="sign_up.html" class="signup-btn">Sign Up</a>
                 </li>
