--- a/login.html
+++ b/login.html
@@ -249,7 +249,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#marketplace">Marketplace</a></li>
                 <li><a href="about_us.html">About</a></li>
-                <li><a href="#how-it-works">How It Works</a></li>
+                <li><a href="how_it_work.html">How It Works</a></li>
                 <li class="auth-buttons">
                     <a href="sign_up.html" class="signup-btn">Sign Up</a>
                 </li>
