--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -20,34 +20,58 @@
                 <li><a href="login.html"><i class="fa fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </aside>
-        <main class="main-content">
-            <header>
-                <h1>Welcome, Seller</h1>
-            </header>
-            <section class="dashboard-summary">
-                <div class="summary-card">
-                    <i class="fa fa-box"></i>
-                    <div>
-                        <h3>120</h3>
-                        <p>Products</p>
+        <div class="content-wrapper">
+            <main class="main-content">
+                <header>
+                    <h1>Welcome, Seller</h1>
+                </header>
+                <section class="dashboard-summary">
+                    <div class="summary-card">
+                        <i class="fa fa-box"></i>
+                        <div>
+                            <h3>120</h3>
+                            <p>Products</p>
+                        </div>
+                    </div>
+                    <div class="summary-card">
+                        <i class="fa fa-shopping-cart"></i>
+                        <div>
+                            <h3>45</h3>
+                            <p>Orders</p>
+                        </div>
+                    </div>
+                    <div class="summary-card">
+                        <i class="fa fa-dollar-sign"></i>
+                        <div>
+                            <h3>$2,500</h3>
+                            <p>Total Sales</p>
+                        </div>
+                    </div>
+                </section>
+            </main>
+            <footer>
+                <div class="footer-content">
+                    <div class="footer-section">
+                        <h4>About ShopWise</h4>
+                        <p>Connecting global markets with African trade</p>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Quick Links</h4>
+                        <a href="#marketplace">Marketplace</a>
+                        <a href="#seller-guide">Seller Guide</a>
+                        <a href="#buyer-guide">Buyer Guide</a>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Contact</h4>
+                        <p>Email: <a href="mailto:info@shopwise.com">info@shopwise.com</a></p>
+                        <p>Phone: +250 123 456 789</p>
                     </div>
                 </div>
-                <div class="summary-card">
-                    <i class="fa fa-shopping-cart"></i>
-                    <div>
-                        <h3>45</h3>
-                        <p>Orders</p>
-                    </div>
+                <div class="footer-bottom">
+                    <p>&copy; 2024 ShopWise. All rights reserved.</p>
                 </div>
-                <div class="summary-card">
-                    <i class="fa fa-dollar-sign"></i>
-                    <div>
-                        <h3>$2,500</h3>
-                        <p>Total Sales</p>
-                    </div>
-                </div>
-            </section>
-        </main>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
@@ -95,6 +119,12 @@
     .sidebar ul li a:hover, .sidebar ul li a.active {
         background: #007bff;
     }
+    .content-wrapper {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        height: 100vh;
+    }
     .main-content {
         flex-grow: 1;
         padding: 20px;
@@ -129,5 +159,41 @@
         margin: 0;
         font-size: 14px;
         color: gray;
+    }
+
+    /* Footer Styles */
+    footer {
+        background: #333;
+        color: white;
+        padding: 30px 20px;
+        text-align: center;
+        width: 100%;
+        margin-top: auto;
+    }
+    .footer-content {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        max-width: 1200px;
+        margin: auto;
+    }
+    .footer-section {
+        flex: 1;
+        min-width: 250px;
+        padding: 10px;
+    }
+    .footer-section h4 {
+        margin-bottom: 10px;
+    }
+    .footer-section a {
+        color: #ffcc00;
+        text-decoration: none;
+        display: block;
+        margin: 5px 0;
+    }
+    .footer-bottom {
+        margin-top: 20px;
+        border-top: 1px solid #555;
+        padding-top: 15px;
     }
 </style>
