--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -6,6 +6,107 @@
     <title>Seller Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .dashboard-container {
+            display: flex;
+            flex: 1;
+        }
+        .sidebar {
+            width: 250px;
+            background: #333;
+            color: white;
+            padding: 20px;
+            position: fixed;
+            height: 100%;
+        }
+        .sidebar h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .sidebar ul {
+            list-style: none;
+        }
+        .sidebar ul li {
+            margin: 15px 0;
+        }
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .sidebar ul li a:hover, .sidebar ul li a.active {
+            background: #007bff;
+        }
+        .main-content {
+            margin-left: 260px;
+            flex-grow: 1;
+            padding: 20px;
+            background: #f4f4f4;
+        }
+        .dashboard-summary {
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+        .summary-card {
+            background: white;
+            padding: 20px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            flex: 1;
+            min-width: 250px;
+        }
+        .summary-card i {
+            font-size: 2rem;
+            color: #007bff;
+        }
+        .chart-container {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+        .orders-table {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background: #007bff;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="dashboard-container">
@@ -20,180 +121,75 @@
                 <li><a href="login.html"><i class="fa fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </aside>
-        <div class="content-wrapper">
-            <main class="main-content">
-                <header>
-                    <h1>Welcome, Seller</h1>
-                </header>
-                <section class="dashboard-summary">
-                    <div class="summary-card">
-                        <i class="fa fa-box"></i>
-                        <div>
-                            <h3>120</h3>
-                            <p>Products</p>
-                        </div>
-                    </div>
-                    <div class="summary-card">
-                        <i class="fa fa-shopping-cart"></i>
-                        <div>
-                            <h3>45</h3>
-                            <p>Orders</p>
-                        </div>
-                    </div>
-                    <div class="summary-card">
-                        <i class="fa fa-dollar-sign"></i>
-                        <div>
-                            <h3>$2,500</h3>
-                            <p>Total Sales</p>
-                        </div>
-                    </div>
-                </section>
-            </main>
-            <footer>
-                <div class="footer-content">
-                    <div class="footer-section">
-                        <h4>About ShopWise</h4>
-                        <p>Connecting global markets with African trade</p>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Quick Links</h4>
-                        <a href="#marketplace">Marketplace</a>
-                        <a href="#seller-guide">Seller Guide</a>
-                        <a href="#buyer-guide">Buyer Guide</a>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Contact</h4>
-                        <p>Email: <a href="mailto:info@shopwise.com">info@shopwise.com</a></p>
-                        <p>Phone: +250 123 456 789</p>
+        <main class="main-content">
+            <header>
+                <h1>Welcome, Seller</h1>
+            </header>
+            <section class="dashboard-summary">
+                <div class="summary-card">
+                    <i class="fa fa-box"></i>
+                    <div>
+                        <h3>120</h3>
+                        <p>Products</p>
                     </div>
                 </div>
-                <div class="footer-bottom">
-                    <p>&copy; 2024 ShopWise. All rights reserved.</p>
+                <div class="summary-card">
+                    <i class="fa fa-shopping-cart"></i>
+                    <div>
+                        <h3>45</h3>
+                        <p>Orders</p>
+                    </div>
                 </div>
-            </footer>
-        </div>
+                <div class="summary-card">
+                    <i class="fa fa-dollar-sign"></i>
+                    <div>
+                        <h3>$2,500</h3>
+                        <p>Total Sales</p>
+                    </div>
+                </div>
+            </section>
+            <section class="chart-container">
+                <canvas id="salesChart"></canvas>
+            </section>
+            <section class="orders-table">
+                <h2>Recent Orders</h2>
+                <table>
+                    <tr>
+                        <th>Order ID</th>
+                        <th>Product</th>
+                        <th>Customer</th>
+                        <th>Status</th>
+                    </tr>
+                    <tr>
+                        <td>#1001</td>
+                        <td>Product A</td>
+                        <td>John Doe</td>
+                        <td>Shipped</td>
+                    </tr>
+                    <tr>
+                        <td>#1002</td>
+                        <td>Product B</td>
+                        <td>Jane Smith</td>
+                        <td>Pending</td>
+                    </tr>
+                </table>
+            </section>
+        </main>
     </div>
+    <script>
+        const ctx = document.getElementById('salesChart').getContext('2d');
+        new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: ['Jan', 'Feb', 'Mar'],
+                datasets: [{
+                    label: 'Sales ($)',
+                    data: [500, 1000, 1500],
+                    borderColor: '#007bff',
+                    fill: false
+                }]
+            }
+        });
+    </script>
 </body>
 </html>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-    }
-    body {
-        display: flex;
-        height: 100vh;
-    }
-    .dashboard-container {
-        display: flex;
-        width: 100%;
-    }
-    .sidebar {
-        width: 250px;
-        background: #333;
-        color: white;
-        padding: 20px;
-    }
-    .sidebar h2 {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-    .sidebar ul {
-        list-style: none;
-    }
-    .sidebar ul li {
-        margin: 15px 0;
-    }
-    .sidebar ul li a {
-        color: white;
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        padding: 10px;
-        border-radius: 5px;
-    }
-    .sidebar ul li a:hover, .sidebar ul li a.active {
-        background: #007bff;
-    }
-    .content-wrapper {
-        display: flex;
-        flex-direction: column;
-        flex: 1;
-        height: 100vh;
-    }
-    .main-content {
-        flex-grow: 1;
-        padding: 20px;
-        background: #f4f4f4;
-    }
-    header {
-        margin-bottom: 20px;
-    }
-    .dashboard-summary {
-        display: flex;
-        gap: 20px;
-    }
-    .summary-card {
-        background: white;
-        padding: 20px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        flex: 1;
-    }
-    .summary-card i {
-        font-size: 2rem;
-        color: #007bff;
-    }
-    .summary-card h3 {
-        margin: 0;
-        font-size: 24px;
-    }
-    .summary-card p {
-        margin: 0;
-        font-size: 14px;
-        color: gray;
-    }
-
-    /* Footer Styles */
-    footer {
-        background: #333;
-        color: white;
-        padding: 30px 20px;
-        text-align: center;
-        width: 100%;
-        margin-top: auto;
-    }
-    .footer-content {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-        max-width: 1200px;
-        margin: auto;
-    }
-    .footer-section {
-        flex: 1;
-        min-width: 250px;
-        padding: 10px;
-    }
-    .footer-section h4 {
-        margin-bottom: 10px;
-    }
-    .footer-section a {
-        color: #ffcc00;
-        text-decoration: none;
-        display: block;
-        margin: 5px 0;
-    }
-    .footer-bottom {
-        margin-top: 20px;
-        border-top: 1px solid #555;
-        padding-top: 15px;
-    }
-</style>
